# TUBES-PMC-09

./: .gitignore  CMakeLists.txt  Makefile  README.md  getData.c  main.c  main.txt  mainCSV.c  mainCSV.txt
data/: Biaya Tindakan.csv  Data Pasien.csv  DataPMC20232024.xlsx  Riwayat Pasien.csv
header/: dataType.h  getData.h  getDataCSV.h  globalVar.h  guiDataType.h  gui_basePage.h  gui_informasiPasienPage.h  gui_laporanPendapatanPage.h  gui_pasienDataPage.h  gui_pasienKontrol.h  gui_pasienKontrolPage.h  gui_penyakitperWaktuPage.h  gui_riwayatPasienPage.h  informasiPasienUtil.h  laporanPendapatanUtil.h  pasienKontrolUtil.h  pasienUtil.h  penyakitperWaktuUtil.h  riwayatUtil.h  util_getData.h  util_informasiPasienUtil.h  util_laporanPendapatanUtil.h  util_pasienKontrolUtil.h  util_pasienUtil.h  util_penyakitperWaktuUtil.h  util_riwayatUtil.h  util_saveData.h
src/: Makefile  getData.c  getDataCSV.c  gui_basePage.c  gui_informasiPasienPage.c  gui_laporanPendapatanPage.c  gui_pasienDataPage.c  gui_pasienKontrol.c  gui_penyakitperWaktu.c  gui_riwayatPasienPage.c  informasiPasien.c  laporanPendapatan.c  main.c  pasienKontrol.c  pasienUtil.c  penyakitperWaktu.c  riwayatUtil.c  util_getData.c  util_informasiPasien.c  util_laporanPendapatan.c  util_pasienKontrol.c  util_pasienUtil.c  util_penyakitperWaktu.c  util_riwayatUtil.c  util_saveData.c
tubesPMC2024/: DataPMC20232024.xlsx  Struktur Dokumen Laporan.txt
